[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/PlayerHead.png" type="Texture" id=1]
[ext_resource path="res://src/Unused/PSSUI.gd" type="Script" id=2]


[sub_resource type="Theme" id=1]

[node name="PSSUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -355.0
margin_right = 132.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 232.0
margin_bottom = 14.0
text = "Players Select"
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 232.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
disabled = true
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 232.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 232.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 232.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 232.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 232.0
margin_bottom = 338.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer"]
margin_top = 342.0
margin_right = 232.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer"]
margin_top = 396.0
margin_right = 232.0
margin_bottom = 446.0
rect_min_size = Vector2( 0, 50 )
theme = SubResource( 1 )
text = "8"

[node name="SelectionCursor" type="Node2D" parent="."]
position = Vector2( 225, 70 )

[node name="Sprite" type="Sprite" parent="SelectionCursor"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/Button8" to="." method="_on_Button8_pressed"]
